Fixes the searcbar overflow issue with advanced search in issue #102

--- a/less/sections/primo-advanced-search.less
+++ b/less/sections/primo-advanced-search.less
@@ -148,6 +148,9 @@
         .make-md-column(12);
         width: 100%;
         padding-left: 0;
+        &.EXLHide{
+          .sr-only();
+        }
       }
 
     }//
@@ -219,4 +222,10 @@
     position: static;
     float: none;
   }
+}
+
+
+
+.EXLAdvancedSearchFormDateRangeRow label.EXLHide{
+  .sr-only();
 }
